modif affichage liste de plantes